@@ -1,3 +1,8 @@
+2019-10-18  Tobias Burnus  <tobias@codesourcery.com>
+
+	PR fortran/91586
+	* gfortran.dg/class_71.f90: New.
+
 2019-10-18  Georg-Johann Lay  <avr@gjlay.de>
 
 	Fix some fallout for small targets.
